--- a/src/main/resources/fxml/Locales.fxml
+++ b/src/main/resources/fxml/Locales.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -218,33 +219,44 @@
                         <RowConstraints percentHeight="0.0" valignment="CENTER" vgrow="ALWAYS" />
                      </rowConstraints>
                      <children>
-                        <PieChart fx:id="tartaPorcentaje" prefHeight="400.0" prefWidth="450.0" title="Referencia respecto al resto de locales" GridPane.columnIndex="2">
+                        <ScrollPane hbarPolicy="ALWAYS" prefHeight="400.0" prefWidth="450.0" vbarPolicy="NEVER" GridPane.columnIndex="2">
+                           <content>
+                              <BarChart fx:id="barrasComparativo" animated="false" barGap="5.0" categoryGap="20.0" legendVisible="false" prefWidth="450.0" title="COMPARATIVO VALOR">
+                                 <xAxis>
+                                    <CategoryAxis fx:id="comLocAx" label="LOCALES" side="BOTTOM" />
+                                 </xAxis>
+                                 <yAxis>
+                                    <NumberAxis fx:id="comPreAx" label="VALOR" side="LEFT" />
+                                 </yAxis>
+                              </BarChart>
+                           </content>
                            <GridPane.margin>
-                              <Insets bottom="5.0" left="5.0" right="5.0" top="20.0" />
+                              <Insets left="5.0" />
                            </GridPane.margin>
-                        </PieChart>
-                        <LineChart fx:id="lineasEvolutivo" prefWidth="450.0" title="Evolutivo de pedidos">
-                           <xAxis>
-                              <CategoryAxis fx:id="evoDiaAx" label="Dias" side="BOTTOM" />
-                           </xAxis>
-                           <yAxis>
-                              <NumberAxis fx:id="evoPreAx" label="Precio" minorTickCount="1" side="LEFT" tickLength="5.0" />
-                           </yAxis>
+                        </ScrollPane>
+                        <ScrollPane hbarPolicy="ALWAYS" prefHeight="400.0" prefWidth="450.0" vbarPolicy="NEVER">
+                           <content>
+                              <LineChart fx:id="lineasEvolutivo" animated="false" axisSortingPolicy="NONE" legendVisible="false" prefWidth="450.0" title="EVOLUTIVO PEDIDOS">
+                                 <xAxis>
+                                    <CategoryAxis fx:id="evoDiaAx" label="FECHA" side="BOTTOM" />
+                                 </xAxis>
+                                 <yAxis>
+                                    <NumberAxis fx:id="evoPreAx" label="VALOR" minorTickCount="1" side="LEFT" tickLength="5.0" />
+                                 </yAxis>
+                              </LineChart>
+                           </content>
                            <GridPane.margin>
-                              <Insets bottom="5.0" left="5.0" right="5.0" top="20.0" />
+                              <Insets right="5.0" />
                            </GridPane.margin>
-                        </LineChart>
-                        <BarChart fx:id="barrasComparativo" prefWidth="450.0" title="Comparativo de pedidos" GridPane.columnIndex="1">
-                           <xAxis>
-                              <CategoryAxis fx:id="comLocAx" label="Locales" side="BOTTOM" />
-                           </xAxis>
-                           <yAxis>
-                              <NumberAxis fx:id="comPreAx" label="Precio" side="LEFT" />
-                           </yAxis>
+                        </ScrollPane>
+                        <ScrollPane hbarPolicy="NEVER" prefHeight="400.0" prefWidth="450.0" vbarPolicy="NEVER" GridPane.columnIndex="1">
+                           <content>
+                              <PieChart fx:id="tartaPorcentaje" legendVisible="false" prefHeight="400.0" prefWidth="450.0" title="\% PESO LOCALES" />
+                           </content>
                            <GridPane.margin>
-                              <Insets bottom="5.0" left="5.0" right="5.0" top="20.0" />
+                              <Insets left="5.0" right="5.0" />
                            </GridPane.margin>
-                        </BarChart>
+                        </ScrollPane>
                      </children>
                      <VBox.margin>
                         <Insets top="20.0" />
@@ -260,7 +272,7 @@
             <Separator maxWidth="300.0" minWidth="100.0" prefWidth="200.0" visible="false" BorderPane.alignment="CENTER" />
          </right>
          <bottom>
-            <Separator maxHeight="300.0" minHeight="100.0" orientation="VERTICAL" prefHeight="150.0" visible="false" BorderPane.alignment="CENTER" />
+            <Separator maxHeight="150.0" minHeight="50.0" orientation="VERTICAL" prefHeight="100.0" visible="false" BorderPane.alignment="CENTER" />
          </bottom>
       </BorderPane>
    </children>
