--- a/src/main/resources/fxml/Dashboard.fxml
+++ b/src/main/resources/fxml/Dashboard.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
@@ -33,6 +34,14 @@
             <Insets top="5.0" />
          </VBox.margin>
       </Label>
+      <Button fx:id="btnRefresco" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#refrescar" text="REFRESCAR DATOS" textAlignment="CENTER">
+         <VBox.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </VBox.margin>
+         <font>
+            <Font name="Noto Sans Bold" size="14.0" />
+         </font>
+      </Button>
       <HBox prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
          <children>
             <TableView fx:id="tvCuadro" tableMenuButtonVisible="true" HBox.hgrow="ALWAYS">
