--- a/src/main/resources/styles/Buttons.css
+++ b/src/main/resources/styles/Buttons.css
@@ -97,3 +97,13 @@
     -fx-padding: 4 6 4 6;
     -fx-background-insets: 2 0 0 0,2 0 4 0, 2 0 4 0, 2 0 4 0;
 }
+
+.button{
+    
+}
+.button:hover{
+    
+}
+.button:pressed{
+    
+}
