--- a/src/main/resources/fxml/ProductosAM.fxml
+++ b/src/main/resources/fxml/ProductosAM.fxml
@@ -194,17 +194,17 @@
                   <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
                </rowConstraints>
                <children>
-                  <ScrollPane hbarPolicy="NEVER" maxHeight="425.0" maxWidth="500.0" minHeight="350.0" minWidth="400.0" prefHeight="375.0" prefWidth="450.0" vbarPolicy="NEVER" GridPane.columnIndex="1">
+                  <ScrollPane hbarPolicy="NEVER" maxHeight="500.0" maxWidth="500.0" minHeight="300.0" minWidth="300.0" prefHeight="400.0" prefWidth="400.0" vbarPolicy="NEVER" GridPane.columnIndex="1">
                      <content>
-                        <PieChart fx:id="tartaPorcentaje" legendVisible="false" maxHeight="425.0" maxWidth="500.0" minHeight="350.0" minWidth="400.0" prefHeight="375.0" prefWidth="450.0" title="\% REFERENCIAL TOTAL" />
+                        <PieChart fx:id="tartaPorcentaje" animated="false" legendVisible="false" maxHeight="500.0" maxWidth="500.0" minHeight="300.0" minWidth="300.0" prefHeight="400.0" prefWidth="400.0" title="\% REFERENCIAL TOTAL" />
                      </content>
                      <GridPane.margin>
                         <Insets left="5.0" right="5.0" />
                      </GridPane.margin>
                   </ScrollPane>
-                  <ScrollPane hbarPolicy="ALWAYS" maxHeight="425.0" maxWidth="500.0" minHeight="350.0" minWidth="400.0" prefHeight="375.0" prefWidth="450.0" vbarPolicy="NEVER" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                  <ScrollPane hbarPolicy="ALWAYS" maxHeight="500.0" maxWidth="500.0" minHeight="300.0" minWidth="300.0" prefHeight="400.0" prefWidth="400.0" vbarPolicy="NEVER" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <content>
-                        <LineChart fx:id="lineasEvolutivo" alternativeColumnFillVisible="true" animated="false" axisSortingPolicy="NONE" legendVisible="false" maxHeight="425.0" maxWidth="500.0" minHeight="350.0" minWidth="400.0" prefHeight="375.0" prefWidth="450.0" title="EVOLUTIVO PEDIDOS">
+                        <LineChart fx:id="lineasEvolutivo" alternativeColumnFillVisible="true" animated="false" axisSortingPolicy="NONE" legendVisible="false" maxHeight="500.0" maxWidth="900.0" minHeight="300.0" minWidth="300.0" prefHeight="400.0" prefWidth="600.0" title="EVOLUTIVO PEDIDOS">
                            <xAxis>
                               <CategoryAxis fx:id="evoDiaAx" label="FECHA" side="BOTTOM" />
                            </xAxis>
@@ -217,9 +217,9 @@
                         <Insets right="5.0" />
                      </GridPane.margin>
                   </ScrollPane>
-                  <ScrollPane hbarPolicy="ALWAYS" maxHeight="425.0" maxWidth="500.0" minHeight="350.0" minWidth="400.0" prefHeight="375.0" prefWidth="450.0" vbarPolicy="NEVER" GridPane.columnIndex="2">
+                  <ScrollPane hbarPolicy="ALWAYS" maxHeight="500.0" maxWidth="500.0" minHeight="300.0" minWidth="300.0" prefHeight="400.0" prefWidth="400.0" vbarPolicy="NEVER" GridPane.columnIndex="2">
                      <content>
-                        <BarChart fx:id="barrasComparativo" alternativeColumnFillVisible="true" animated="false" barGap="5.0" legendVisible="false" maxHeight="425.0" maxWidth="500.0" minHeight="350.0" minWidth="400.0" prefHeight="375.0" prefWidth="450.0" title="COMPARATIVO PEDIDOS">
+                        <BarChart fx:id="barrasComparativo" alternativeColumnFillVisible="true" animated="false" barGap="5.0" legendVisible="false" maxHeight="500.0" maxWidth="900.0" minHeight="300.0" minWidth="300.0" prefHeight="400.0" prefWidth="600.0" title="COMPARATIVO PEDIDOS">
                            <xAxis>
                               <CategoryAxis fx:id="comLocAx" label="LOCAL" side="BOTTOM" />
                            </xAxis>
