--- a/src/main/resources/styles/Base.css
+++ b/src/main/resources/styles/Base.css
@@ -8,7 +8,7 @@
     -fx-font-size: 14px;
     -fx-font-family: "Noto Sans";
     -fx-background-color: #FFFFFF;
-    -fx-alignment: CENTER;
+    -fx-alignment: center;
     -fx-font-weight: bold;
 }
 
